--- a/phase-2/Session-1/SecondDemo/src/main/webapp/WEB-INF/web.xml
+++ b/phase-2/Session-1/SecondDemo/src/main/webapp/WEB-INF/web.xml
@@ -12,7 +12,7 @@
   <!-- create mapping -->
   <servlet-mapping>
   <servlet-name>first</servlet-name>
-  <url-pattern>/submit</url-pattern>
+  <url-pattern>/login</url-pattern>
   </servlet-mapping>
   
 </web-app>
